--- a/src/app/content/screens/dashboard/dashboard.module.css
+++ b/src/app/content/screens/dashboard/dashboard.module.css
@@ -1,6 +1,8 @@
 .dashboardContainer {
-    padding: 20px;
-    border: 1px solid red;
+    height: 100vh;
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
 }
 
 .dashboardContent{
