--- a/src/app/content/screens/dashboard/layouts/Init.module.css
+++ b/src/app/content/screens/dashboard/layouts/Init.module.css
@@ -23,13 +23,20 @@
 }
 
 .init__top__brown_1{
-    background-color: #815839;
+    background-color: #a89382;
 }
 
 .init__top__brown_2{
-    background-color: #a57551;
+    background-color: #927d6d;
 }
 
 .init__top__brown_3{
-    background-color: #c99872;
+    background-color: #9c9086;
 }
+
+.init__table{
+    padding: 1rem;
+    width: 95.5%;
+    margin: 0 auto;
+}
+  
