--- a/src/app/components/Sidebar/Sidebar.module.css
+++ b/src/app/components/Sidebar/Sidebar.module.css
@@ -10,3 +10,12 @@
     height: 50px;
     margin-left: 1rem;
 }
+
+.icon{
+    width: 30px;
+    height: 50px;
+}
+
+.icon__text{
+    padding: 0 .7rem;
+}
