--- a/src/app/content/screens/dashboard/dashboard.module.css
+++ b/src/app/content/screens/dashboard/dashboard.module.css
@@ -1,4 +1,5 @@
 .dashboardContainer {
+    width: 100%;
     height: 100vh;
     padding: 0;
     margin: 0;
@@ -8,4 +9,4 @@
 .dashboardContent{
 
 }
-  
+
