--- a/src/app/components/Sidebar/Sidebar.module.css
+++ b/src/app/components/Sidebar/Sidebar.module.css
@@ -1,9 +1,12 @@
 .sidebar{
-    height: auto;
+    height: 100vh;
+    width: 350px;
     background-color: #455459;
     padding: 2rem 1rem;
     margin: 0;
     overflow-y: scroll;
+    z-index: 100;
+    transition: width 0.3s ease;
 }
 
 .menu__hamburguer{
@@ -13,7 +16,7 @@
 }
 
 .menu__list{
-    height: auto;
+    height: 110vh;
 }
 
 .icon{
@@ -24,3 +27,42 @@
 .icon__text{
     padding: 0 .7rem;
 }
+
+.sidebar::-webkit-scrollbar {
+    width: 10px; 
+    background-color: #455459;
+}
+
+ 
+.sidebar::-webkit-scrollbar-thumb {
+    background-color: #888; 
+    border-radius: 5px; 
+}
+  
+
+.sidebar::-webkit-scrollbar-thumb:hover {
+    background-color: #555; /* cor de fundo do botão ao passar o mouse */
+}
+  
+
+.sidebarOpen {
+    width: 350px; 
+}
+  
+.sidebarClosed {
+    width: 64px; 
+}
+
+.sidebar_compressed{
+    width: 50px;
+    height: 100vh;
+    background-color: #455459;
+}
+
+.menu__hamburguer__compressed{
+    width: 30px;
+    height: 30px;
+    margin-left: 0.5rem;
+    margin-top: 1rem;
+}
+  
