--- a/src/app/components/Sidebar/Sidebar.module.css
+++ b/src/app/components/Sidebar/Sidebar.module.css
@@ -2,7 +2,7 @@
     height: 100vh;
     width: 350px;
     background-color: #455459;
-    padding: 2rem 1rem;
+    padding: 1rem 1rem;
     margin: 0;
     overflow-y: scroll;
     z-index: 100;
@@ -57,6 +57,7 @@
     width: 50px;
     height: 100vh;
     background-color: #455459;
+    box-shadow: 1px 2px 2px 1px #b8b8b8;
 }
 
 .menu__hamburguer__compressed{
