--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,18 @@
+
+@import 'froala-editor/css/froala_style.min.css';
+@import 'froala-editor/css/froala_editor.pkgd.min.css';
+@import url('https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
+
+
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Urbanist", sans-serif;
+}
+
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
