--- a/src/app/content/screens/dashboardAdmin/dashboard.module.css
+++ b/src/app/content/screens/dashboardAdmin/dashboard.module.css
@@ -1,12 +1,9 @@
-.dashboardContainer {
-    width: 100%;
-    height: 100vh;
-    padding: 0;
-    margin: 0;
-    overflow: hidden;
-}
 
 .dashboardContent{
-
+    width: 100%;
+    height: auto;
+    padding: 0;
+    margin: 0;
+    overflow-y: hidden;
 }
 
