--- a/src/app/components/Modal/Site/RegisterModal/RegisterModal.module.css
+++ b/src/app/components/Modal/Site/RegisterModal/RegisterModal.module.css
@@ -1,6 +1,8 @@
 .dialogPaper {
-    width: 30%;
-    border-radius: 0px;
+  width: 50%;
+  border-radius: 0px;
+  height: auto;
+  overflow: hidden;
   }
   
   .dialogTitle {
@@ -10,6 +12,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    overflow: hidden;
   }
   
   .closeButton {
@@ -21,7 +24,8 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
-    margin-top: -2rem;
+    margin-top: 1.5rem;
+    overflow: hidden;
   }
 
   .links {
@@ -39,12 +43,29 @@
     cursor: pointer;
     align-self: initial;
     text-transform: none;
-    padding: 0.5rem ;
+    box-sizing: border-box;
+    padding: 1rem;
   }
 
-.button{
+  .dialogActions{
+    margin: 0 auto;
+    width: 100%;
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .button{
     background-color:#1E3932;
+    width: 100%;
+    margin-right: 1rem;
+    align-self: center;
+    color: #1E3932;
+
 }
+
 
 .button:hover{
     background-color:#101f1b;
