--- a/src/app/components/Topbar/Topbar.module.css
+++ b/src/app/components/Topbar/Topbar.module.css
@@ -4,9 +4,11 @@
     height: 70px;
     background-color: #1E3932;
     display: grid;
-    grid-template-columns: 4fr 1fr 1fr;
+    grid-template-columns: 4fr 1fr .5fr;
     box-sizing: border-box;
-    box-shadow: 1px 2px 2px 1px #919191;
+    box-shadow: 1px 2px 2px 1px #2b2b2b;
+    position: fixed;
+    z-index: 1000;
 }
 
 
