--- a/src/app/content/screens/dashboardAdmin/layouts/initDashboard/Init.module.css
+++ b/src/app/content/screens/dashboardAdmin/layouts/initDashboard/Init.module.css
@@ -1,8 +1,10 @@
 .init{
     width: 100%;
-    margin: 0 auto;
-    height: 500px;
+    margin: 4rem auto;
+    height: 100vh;
     overflow-y: auto;
+    padding: 2rem;
+  
 }
 
 .init__top{
@@ -10,9 +12,10 @@
     grid-template-columns: repeat(3, 1fr);
     justify-content: center;
     gap: 1rem;
-    padding: 2rem;
+    padding: 0;
     height: auto;
     width: 100%;
+    padding-bottom: 1rem;
 }
 
 .init__top__brown_1, .init__top__brown_2, .init__top__brown_3{
@@ -28,7 +31,6 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 1rem;
     box-shadow: 1px 1px 2px 2px #ccc;
     padding: .4rem;
     box-sizing: border-box;
