--- a/src/app/content/screens/dashboardAdmin/layouts/products/Products.module.css
+++ b/src/app/content/screens/dashboardAdmin/layouts/products/Products.module.css
@@ -1,8 +1,8 @@
 .product{
     width: 100%;
-    margin: 0 auto;
-    height: 500px;
-    overflow-y: auto;
+    margin: 4rem auto;
+    height: 100vh;
+    overflow-y: scroll;
     padding: 2rem;
 }
 
