--- a/src/app/content/screens/dashboardClient/layouts/profile/Profile.module.css
+++ b/src/app/content/screens/dashboardClient/layouts/profile/Profile.module.css
@@ -1,6 +1,6 @@
 .profile{
     width: 100%;
-    margin: 0 auto;
+    margin: 4rem auto;
     height: 500px;
     overflow-y: auto;
     padding: 2rem;
