--- a/src/app/content/screens/site/home/home.module.css
+++ b/src/app/content/screens/site/home/home.module.css
@@ -2,17 +2,46 @@
 
 .home__background {
   background: url('../../../../../../public/siteImages/background_site.png');
-  background-size: 100% 100% cover;
-  height: 400px;
+  background-size: 100% 100%;
+  height: 60vh;
+}
+
+@media screen and (max-width: 768px){
+  .home__background {
+    background: url('../../../../../../public/siteImages/background_site.png');
+    background-size: 100% 100%;
+    height: 30vh;
+  }
+  
 }
 
 .productCard {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  height: auto;
+  background-color: white;
 }
 
 .productImage {
-  height: 200px;
-  background-color: #e0e0e0;
+  height: auto;
+  object-fit: contain;
+  background-color: white;
 }
+
+.sectionPlans{
+  padding: 1rem;
+  margin-top: 8rem;
+}
+
+.carouselItem, .carouselItem2{
+  margin-top: 2rem;
+  gap: 1rem;
+  height: 450px;
+  margin-left: 1rem;
+}
+
+.carouselItem2{
+  margin-top: 4rem;
+}
+
