--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,20 @@
 @import "~slick-carousel/slick/slick.css";
 @import "~slick-carousel/slick/slick-theme.css";
 
+@import url('https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
+@import 'froala-editor/css/froala_style.min.css';
+@import 'froala-editor/css/froala_editor.pkgd.min.css';
+
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Urbanist", sans-serif;
+  font-optical-sizing: auto;
+  font-family: "Urbanist", sans-serif;
+  font-optical-sizing: auto;
+}
 
 
 *{
