--- a/src/pages/globals.css
+++ b/src/pages/globals.css
@@ -1,11 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
+
 @import 'froala-editor/css/froala_style.min.css';
 @import 'froala-editor/css/froala_editor.pkgd.min.css';
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
 
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
 }
